--- a/index.html
+++ b/index.html
@@ -81,7 +81,7 @@
         <div class='parent'>
             <div class="col">
                 <img class='book' src=
-                "http://placehold.it/350x200"></a>
+                "img/mobile.png"></a>
             </div>
             <div class="detail">
                 <h3>Mobile Homepage</h3></a>
