link CPS story to firebaseapp

--- a/index.html
+++ b/index.html
@@ -47,7 +47,7 @@
                 First Aid in the Jungle</a>
             </li>
             <li>
-                <a href="#">What CPS is Doing for Refugee Students</a>
+                <a href="https://finaljour390.firebaseapp.com/">What CPS is Doing for Refugee Students</a>
             </li>
             <li>
                 <a href="https://jour383-final.firebaseapp.com/" target="_blank">What Actually
