--- a/index.html
+++ b/index.html
@@ -117,6 +117,17 @@
         </div>
         <div class='parent'>
             <div class="col">
+                <img class='book' src=
+                "img/iraq-isis.png"></a>
+            </div>
+            <div class="detail">
+                <h3>A Year of Terror in Iraq</h3></a>
+                <p class="pub">Personal Project</p>
+                <p>I wanted to make a visual representation of ISIS attacks in Iraq this year. The design was inspired by NYT graphics. Used D3.js to create the basemap, converted it to an SVG, and used Illustrator to label details.</p>
+            </div>
+        </div>
+        <div class='parent'>
+            <div class="col">
                 <a href=
                 'https://jour383-final.firebaseapp.com/'>
                 <img class='book' src=
