moved projects order

--- a/index.html
+++ b/index.html
@@ -117,25 +117,14 @@
         </div>
         <div class='parent'>
             <div class="col">
-                <img class='book' src=
-                "img/iraq-isis.png"></a>
-            </div>
-            <div class="detail">
-                <h3>A Year of Terror in Iraq</h3></a>
-                <p class="pub">Personal Project</p>
-                <p>I wanted to make a visual representation of ISIS attacks in Iraq this year. The design was inspired by NYT graphics. Used D3.js to create the basemap, converted it to an SVG, and used Illustrator to label details.</p>
-            </div>
-        </div>
-        <div class='parent'>
-            <div class="col">
                 <a href=
-                'https://jour383-final.firebaseapp.com/'>
+                'https://jour383-final.firebaseapp.com/' target="_blank">
                 <img class='book' src=
                 "img/cold2.jpg"></a>
             </div>
             <div class="detail">
                 <a href=
-                'https://jour383-final.firebaseapp.com/'>
+                'https://jour383-final.firebaseapp.com/' target="_blank">
                 <h3>What Actually Treats Your Cold?</h3></a>
                 <p class="pub">Class Project</p>
                 <p>I designed, developed, and wrote a service-orientated piece about OTC cold medications. The crux of the project was creating filtering "cards" that explained common active ingredients in drug labels and their uses. Used HTML, CSS, JavaScript, and jQuery.</p>
@@ -143,6 +132,20 @@
         </div>
         <div class='parent'>
             <div class="col">
+              <a href='https://iraq-a704c.firebaseapp.com/' target="_blank">
+                <img class='book' src=
+                "img/iraq-isis.png"></a>
+            </div>
+            <div class="detail">
+              <a href="https://iraq-a704c.firebaseapp.com/" target="_blank">
+                <h3>A Year of Terror in Iraq</h3></a>
+                <p class="pub">Personal Project</p>
+                <p>I wanted to make a visual representation of ISIS attacks in Iraq this year. The design was inspired by NYT graphics. Used D3.js to create the basemap, converted it to an SVG, and used Illustrator to label details.</p>
+            </div>
+        </div>
+        <div class='parent'>
+            <div class="col">
+              <a href="http://medill.co/wrecked/">
                 <img class='book' src=
                 "img/wrecked.png"></a>
             </div>
