--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
           </ul>
         </nav>
         <br>
-          <p class="description">I am a journalist and self-taught programmer studying at Northwestern University. I am also a developer and student fellow at the <a href="knightlab.northwestern.edu">Knight Lab</a>, where I found my love for making data visualizations. Currently, I'm in Washington D.C. covering the presidential election for <a href="www.medillonthehill.medill.northwestern.edu/">Medill on the Hill</a>. Previously, I interned at <a href="www.nbcnews.com">NBC News</a>. My work has been published by the <i> Washington Post</i>, NBC News, Public Radio Institute, and more. </p>
+          <p class="description">I am a journalist and self-taught programmer studying at Northwestern University. I am also a student fellow at the <a href="knightlab.northwestern.edu">Knight Lab</a>, where I found my love for making data visualizations. Currently, I'm in Washington D.C. covering the presidential election for <a href="www.medillonthehill.medill.northwestern.edu/">Medill on the Hill</a>. Previously, I interned at <a href="www.nbcnews.com">NBC News</a>. My work has been published by the <i> Washington Post</i>, NBC News, Public Radio Institute, and more. </p>
     </div>
     <div id="words-row">
         <h2>Favorite Words</h2>
