added usatoday and pubs

--- a/index.html
+++ b/index.html
@@ -27,36 +27,56 @@
           </ul>
         </nav>
         <br>
-          <p class="description">I am student studying journalism and computer science at Northwestern University. I am also a student fellow at the <a href="knightlab.northwestern.edu">Knight Lab</a>, where I found my love for making graphics and data visualizations. Currently, I'm in Washington D.C. covering the presidential election for <a href="www.medillonthehill.medill.northwestern.edu/">Medill on the Hill</a>. Previously, I interned at <a href="www.nbcnews.com">NBC News</a>. My work has been published by the <i> Washington Post</i>, NBC News, Public Radio Institute, and more. </p>
+          <p class="description">I am student studying journalism and computer science at Northwestern University. I am also a student fellow at the <a href="knightlab.northwestern.edu">Knight Lab</a>, where I found my love for making graphics and data visualizations. Currently, I'm in Washington D.C. covering the presidential election for <a href="www.medillonthehill.medill.northwestern.edu/">Medill on the Hill</a>. Previously, I interned at <a href="www.nbcnews.com">NBC News</a>. My work has been published by the <i> Washington Post</i>, NBC News, USA Today, and more. </p>
     </div>
     <div id="words-row">
         <h2>Favorite Words</h2>
         <ul class="words-description">
+          <li>
+              <a href=
+              "http://www.usatoday.com/story/news/politics/onpolitics/2016/10/26/romney-says-federal-government-failing-solve-problems-nation-faces/92792182/" target="_blank">
+              Romney says federal government is failing to solve problems nation faces </a>
+              <br>
+              <p class="pub">USA Today</p>
+          </li>
             <li>
                 <a href=
                 "https://www.washingtonpost.com/news/worldviews/wp/2016/08/12/french-millennials-talk-about-life-in-a-country-struggling-with-unemployment-migration-and-terror/#comments" target="_blank">
                 French millennials talk about life in a country struggling with
                 unemployment, migration and terrorism </a>
+                <br>
+                <p class="pub">Washington Post</p>
             </li>
             <li>
               <a href="http://www.pri.org/stories/2016-09-27/how-millennials-dc-watched-and-responded-first-debate">How millennials in DC watched — and responded to — the first debate</a>
+              <br>
+              <p class="pub">Public Radio International</p>
             </li>
             <li>
                 <a href=
                 "http://sjnnchicago.medill.northwestern.edu/blog/2016/07/15/first-aid-jungle/" target="_blank">
                 First Aid in the Jungle</a>
+                <br>
+                <p class="pub">Social Justice Nexus</p>
             </li>
             <li>
                 <a href="https://finaljour390.firebaseapp.com/">What CPS is Doing for Refugee Students</a>
+                <br>
+                <p class="pub">Class Project</p>
             </li>
             <li>
                 <a href="https://jour383-final.firebaseapp.com/" target="_blank">What Actually
                 Treats your Cold?</a>
+                <br>
+                <p class="pub">Class Project</p>
             </li>
+
             <li>
                 <a href=
                 "https://euniceskin.wordpress.com/2015/11/13/on-ching-chong/" target="_blank">On
                 Ching Chong</a>
+                <br>
+                <p class="pub">Personal</p>
             </li>
         </ul>
     </div>
