--- a/index.html
+++ b/index.html
@@ -48,6 +48,18 @@
                 <p class="pub">Washington Post</p>
             </li>
             <li>
+                <a href=
+                "http://medillonthehill.medill.northwestern.edu/2016/10/supreme-court-hears-arguments-on-apple-samsung-patent-law/" target="_blank">Supreme Court hears arguments on Apple Samsung patent law</a>
+                <br>
+                <p class="pub">Medill News Service</p>
+            </li>
+            <li>
+                <a href=
+                "http://medillonthehill.medill.northwestern.edu/2016/10/u-s-will-play-an-indirect-supportive-effort-in-battle-of-mosul-pentagon-press-says/" target="_blank">U.S. will play an indirect supportive effort in battle of Mosul, Pentagon press says</a>
+                <br>
+                <p class="pub">Medill News Service</p>
+            </li>
+            <li>
               <a href="http://www.pri.org/stories/2016-09-27/how-millennials-dc-watched-and-responded-first-debate">How millennials in DC watched — and responded to — the first debate</a>
               <br>
               <p class="pub">Public Radio International</p>
@@ -64,13 +76,6 @@
                 <br>
                 <p class="pub">Class Project</p>
             </li> -->
-            <li>
-                <a href="https://jour383-final.firebaseapp.com/" target="_blank">What Actually
-                Treats your Cold?</a>
-                <br>
-                <p class="pub">Class Project</p>
-            </li>
-
             <li>
                 <a href=
                 "https://euniceskin.wordpress.com/2015/11/13/on-ching-chong/" target="_blank">On
