--- a/index.html
+++ b/index.html
@@ -49,6 +49,13 @@
             </li>
             <li>
                 <a href=
+                "http://www.usnews.com/news/politics/articles/2016-11-02/donald-trump-vows-again-to-repeal-obamacare" target="_blank">
+                Donald Trump Vows Again to Repeal Obamacare </a>
+                <br>
+                <p class="pub">U.S. News and World</p>
+            </li>
+            <li>
+                <a href=
                 "http://medillonthehill.medill.northwestern.edu/2016/10/supreme-court-hears-arguments-on-apple-samsung-patent-law/" target="_blank">Supreme Court hears arguments on Apple Samsung patent law</a>
                 <br>
                 <p class="pub">Medill News Service</p>
