--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
               "http://www.usatoday.com/story/news/politics/onpolitics/2016/10/26/romney-says-federal-government-failing-solve-problems-nation-faces/92792182/" target="_blank">
               Romney says federal government is failing to solve problems nation faces </a>
               <br>
-              <p class="pub">USA Today</p>
+              <p class="pub">USA Today, Oct. 26, 2016</p>
           </li>
             <li>
                 <a href=
@@ -45,38 +45,38 @@
                 French millennials talk about life in a country struggling with
                 unemployment, migration and terrorism </a>
                 <br>
-                <p class="pub">Washington Post</p>
+                <p class="pub">Washington Post, Aug. 10, 2016</p>
             </li>
             <li>
                 <a href=
                 "http://www.usnews.com/news/politics/articles/2016-11-02/donald-trump-vows-again-to-repeal-obamacare" target="_blank">
                 Donald Trump Vows Again to Repeal Obamacare </a>
                 <br>
-                <p class="pub">U.S. News and World</p>
+                <p class="pub">U.S. News and World, Nov. 2, 2016</p>
             </li>
             <li>
                 <a href=
                 "http://medillonthehill.medill.northwestern.edu/2016/10/supreme-court-hears-arguments-on-apple-samsung-patent-law/" target="_blank">Supreme Court hears arguments on Apple Samsung patent law</a>
                 <br>
-                <p class="pub">Medill News Service</p>
+                <p class="pub">Medill News Service, Oct. 11, 2016</p>
             </li>
             <li>
                 <a href=
                 "http://medillonthehill.medill.northwestern.edu/2016/10/u-s-will-play-an-indirect-supportive-effort-in-battle-of-mosul-pentagon-press-says/" target="_blank">U.S. will play an indirect supportive effort in battle of Mosul, Pentagon press says</a>
                 <br>
-                <p class="pub">Medill News Service</p>
+                <p class="pub">Medill News Service, Oct. 18, 2016</p>
             </li>
             <li>
               <a href="http://www.pri.org/stories/2016-09-27/how-millennials-dc-watched-and-responded-first-debate">How millennials in DC watched — and responded to — the first debate</a>
               <br>
-              <p class="pub">Public Radio International</p>
+              <p class="pub">Public Radio International, Oct. Sept. 27, 2016</p>
             </li>
             <li>
                 <a href=
                 "http://sjnnchicago.medill.northwestern.edu/blog/2016/07/15/first-aid-jungle/" target="_blank">
                 First Aid in the Jungle</a>
                 <br>
-                <p class="pub">Social Justice Nexus</p>
+                <p class="pub">Social Justice Nexus, June 28, 2016</p>
             </li>
             <!-- <li>
                 <a href="https://finaljour390.firebaseapp.com/">What CPS is Doing for Refugee Students</a>
