usatoday and trump ch 2

--- a/index.html
+++ b/index.html
@@ -49,6 +49,13 @@
             </li>
             <li>
                 <a href=
+                "http://www.usnews.com/news/national-news/articles/2016-11-08/tim-kaine-joe-biden-rally-for-hillary-clinton-in-virginia" target="_blank">
+                Tim Kaine, Joe Biden Rally for Hillary Clinton in Virginia </a>
+                <br>
+                <p class="pub">U.S. News and World, Nov. 9, 2016</p>
+            </li>
+            <li>
+                <a href=
                 "http://www.usnews.com/news/politics/articles/2016-11-02/donald-trump-vows-again-to-repeal-obamacare" target="_blank">
                 Donald Trump Vows Again to Repeal Obamacare </a>
                 <br>
@@ -60,29 +67,6 @@
                 <br>
                 <p class="pub">Medill News Service, Oct. 11, 2016</p>
             </li>
-            <li>
-                <a href=
-                "http://medillonthehill.medill.northwestern.edu/2016/10/u-s-will-play-an-indirect-supportive-effort-in-battle-of-mosul-pentagon-press-says/" target="_blank">U.S. will play an indirect supportive effort in battle of Mosul, Pentagon press says</a>
-                <br>
-                <p class="pub">Medill News Service, Oct. 18, 2016</p>
-            </li>
-            <li>
-              <a href="http://www.pri.org/stories/2016-09-27/how-millennials-dc-watched-and-responded-first-debate">How millennials in DC watched — and responded to — the first debate</a>
-              <br>
-              <p class="pub">Public Radio International, Oct. Sept. 27, 2016</p>
-            </li>
-            <li>
-                <a href=
-                "http://sjnnchicago.medill.northwestern.edu/blog/2016/07/15/first-aid-jungle/" target="_blank">
-                First Aid in the Jungle</a>
-                <br>
-                <p class="pub">Social Justice Nexus, June 28, 2016</p>
-            </li>
-            <!-- <li>
-                <a href="https://finaljour390.firebaseapp.com/">What CPS is Doing for Refugee Students</a>
-                <br>
-                <p class="pub">Class Project</p>
-            </li> -->
             <li>
                 <a href=
                 "https://euniceskin.wordpress.com/2015/11/13/on-ching-chong/" target="_blank">On
@@ -149,6 +133,17 @@
         </div>
         <div class='parent'>
             <div class="col">
+                <img class='book' src=
+                "img/TRUMP2.jpg"></a>
+            </div>
+            <div class="detail">
+                <h3>A Party Divided</h3></a>
+                <p class="pub">NBC News</p>
+                <p>Lead data researcher in this project that spanned both editorial, video, photo, and graphics teams. Collected and cleaned data for all data visualizations and charts in the project. Helped analyze and build charts using C3.js.</p>
+            </div>
+        </div>
+        <div class='parent'>
+            <div class="col">
                 <a href=
                 'https://jour383-final.firebaseapp.com/' target="_blank">
                 <img class='book' src=
@@ -186,7 +181,7 @@
                 'http://medill.co/wrecked/'>
                 <h3>Wrecked</h3></a>
                 <p class="pub">Class Project</p>
-                <p>I created two interactive data viz maps using D3.js, Waypoints, and Leaflet, depicting the path of two shipwreck hypotheses in the Great Lakes. I worked extensively on the JavaScript and D3.js.</p>
+                <p>I created two interactive data viz maps using D3.js, Waypoints, and Leaflet, depicting the path of two shipwreck hypotheses in the Great Lakes. I worked extensively on the JavaScript and D3.js. Username: draft Password: walktheplank</p>
             </div>
         </div>
         <div class='parent'>
