--- a/index.html
+++ b/index.html
@@ -133,10 +133,12 @@
         </div>
         <div class='parent'>
             <div class="col">
+              <a href="http://www.nbcnews.com/specials/donald-trump-republican-party/trump-history" target="_blank">
                 <img class='book' src=
                 "img/TRUMP2.jpg"></a>
             </div>
             <div class="detail">
+                <a href="http://www.nbcnews.com/specials/donald-trump-republican-party/trump-history" target="_blank">
                 <h3>A Party Divided</h3></a>
                 <p class="pub">NBC News</p>
                 <p>Lead data researcher in this project that spanned both editorial, video, photo, and graphics teams. Collected and cleaned data for all data visualizations and charts in the project. Helped analyze and build charts using C3.js.</p>
