--- a/index.html
+++ b/index.html
@@ -128,7 +128,7 @@
                 'http://www.nbcnews.com/storyline/team-refugees'target="_blank">
                 <h3>Olympic Team Refugees</h3></a>
                 <p class="pub">NBC News</p>
-                <p>Created graphics using D3.js and Illustrator to depict how far Team Refugee athletes traveled before finding refuge. See 18-year-old Syrian swimmer Yusra Mardini's journey <a href="http://www.nbcnews.com/card/rami-anis-journey-n621201">here</a>.</p>
+                <p>Created graphics using D3.js and Illustrator to depict how far Team Refugee athletes traveled before finding refugee status. This was a highly collaborative project between the editorial and graphics team, and I was a liaison. See 18-year-old Syrian swimmer Yusra Mardini's journey <a href="http://www.nbcnews.com/card/rami-anis-journey-n621201">here</a>.</p>
             </div>
         </div>
         <div class='parent'>
@@ -156,7 +156,7 @@
                 'https://jour383-final.firebaseapp.com/' target="_blank">
                 <h3>What Actually Treats Your Cold?</h3></a>
                 <p class="pub">Class Project</p>
-                <p>I designed, developed, and wrote a service-orientated piece about OTC cold medications. The crux of the project was creating filtering "cards" that explained common active ingredients in drug labels and their uses. Used HTML, CSS, JavaScript, and jQuery.</p>
+                <p>I designed, developed, and wrote a service-orientated piece about over-the-counter cold medications. The crux of the project was creating a card filtering system that explained common active ingredients in drug labels. I thought it would be useful for consumers at a pharmacy trying to make sense of an often overwhelming cold medication aisle. Due to time constraints, this project is not mobile responsive – something I hope to fix in the near future. Used HTML, CSS, JavaScript, and jQuery.</p>
             </div>
         </div>
         <div class='parent'>
@@ -169,7 +169,7 @@
               <a href="https://iraq-a704c.firebaseapp.com/" target="_blank">
                 <h3>A Year of Terror in Iraq</h3></a>
                 <p class="pub">Personal Project</p>
-                <p>I wanted to make a visual representation of ISIS attacks in Iraq this year. The design was inspired by NYT graphics. Used D3.js to create the basemap, converted it to an SVG, and used Illustrator to label details.</p>
+                <p>I came across an article in the BCC explaining the biggest ISIS-led attack in Iraq in June 2016 that had no visual but simply 300 words and a table. I wanted to practice my D3, Illustrator, and ai2tml skills, so I created a map version that also showed the number of casualties. Used D3.js to create the basemap, converted it to an SVG, and used Illustrator to label details.</p>
             </div>
         </div>
         <div class='parent'>
@@ -183,7 +183,7 @@
                 'http://medill.co/wrecked/'>
                 <h3>Wrecked</h3></a>
                 <p class="pub">Class Project</p>
-                <p>I created two interactive data viz maps using D3.js, Waypoints, and Leaflet, depicting the path of two shipwreck hypotheses in the Great Lakes. I worked extensively on the JavaScript and D3.js. Username: draft Password: walktheplank</p>
+                <p>I created two interactive data viz maps using D3, Waypoints, and Leaflet to depict the path of two shipwreck hypotheses in the Great Lakes. The interactive uses data scrapped from the National Oceanic and Atmospheric Administration. I worked extensive on the JavaScript and D3. Username: draft Password: walktheplank</p>
             </div>
         </div>
         <div class='parent'>
