--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
           </ul>
         </nav>
         <br>
-          <p class="description">I am a programmer and journalist studying at Northwestern University. I am also a student fellow at the <a href="knightlab.northwestern.edu">Knight Lab</a>. Previously, I covered the presidential election for <a href="www.medillonthehill.medill.northwestern.edu/">Medill on the Hill</a> and interned at <a href="www.nbcnews.com">NBC News</a>.My work has been published by the <i> Washington Post</i>, NBC News, USA Today, and more. </p>
+          <p class="description">Hello! I am a programmer and journalist studying at Northwestern University. I'm also a student fellow at the <a href="knightlab.northwestern.edu">Knight Lab</a>. Previously, I covered the presidential election for <a href="www.medillonthehill.medill.northwestern.edu/">Medill on the Hill</a> and interned at <a href="www.nbcnews.com">NBC News</a>. My work has been published by the <i> Washington Post</i>, NBC News, USA Today, and more. </p>
     </div>
     <div id="words-row">
         <h2>Favorite Words</h2>
@@ -97,23 +97,12 @@
         <div class='parent'>
             <div class="col">
                 <img class='book' src=
-                "img/mobile.png"></a>
-            </div>
-            <div class="detail">
-                <h3>Mobile Homepage</h3></a>
-                <p class="pub">NBC News</p>
-                <p>Created design comps of the mobile home page so that the main cover story and related stories flow seamlessly together. Transformed a desktop design into a responsive, mobile friendly version that was not only aesthetically pleasing but also practical and efficient.</p>
-            </div>
-        </div>
-        <div class='parent'>
-            <div class="col">
-                <img class='book' src=
                 "img/cartogram.png"></a>
             </div>
             <div class="detail">
                 <h3>Cartograms</h3></a>
                 <p class="pub">NBC News</p>
-                <p>Designed cartograms to be geographically accurate and, at the same time, familiar to the eye. Conducted in-depth research on existing cartograms, then sketched and prototyped how the map would look and work. They helped visualize how<a href="http://www.nbcnews.com/card/how-battleground-states-voted-past-elections-n632996"> battle states voted in past elections </a>and where<a href="http://www.nbcnews.com/card/where-team-usa-hails-n628491"> Team USA Rio Olympians hail from</a>.</p>
+                <p>Designed NBC's first, original cartograms. Conducted in-depth research on the UX and design of cartograms, then sketched, prototyped, and pitched how NBC's maps should look. They helped visualize how<a href="http://www.nbcnews.com/card/how-battleground-states-voted-past-elections-n632996"> battle states voted in past elections </a>and where<a href="http://www.nbcnews.com/card/where-team-usa-hails-n628491"> Team USA Rio Olympians hail from</a>.</p>
             </div>
         </div>
         <div class='parent'>
@@ -144,6 +133,17 @@
                 <p>Lead data researcher in this project that spanned both editorial, video, photo, and graphics teams. Collected and cleaned data for all data visualizations and charts in the project. Helped analyze and build charts using C3.js.</p>
             </div>
         </div>
+        <div class='parent'>
+      <div class="col">
+          <img class='book' src=
+          "img/mobile.png"></a>
+      </div>
+      <div class="detail">
+          <h3>Mobile Homepage</h3></a>
+          <p class="pub">NBC News</p>
+          <p>Created mock design comps of the mobile home page for Rio Olympic coverage. Transformed a desktop design into a responsive, mobile friendly version that was not only aesthetically pleasing but also practical and efficient.</p>
+      </div>
+  </div>
         <div class='parent'>
             <div class="col">
                 <a href=
