--- a/index.html
+++ b/index.html
@@ -102,7 +102,7 @@
             <div class="detail">
                 <h3>Cartograms</h3></a>
                 <p class="pub">NBC News</p>
-                <p>Designed NBC's first, original cartograms. Conducted in-depth research on the UX and design of cartograms, then sketched, prototyped, and pitched how NBC's maps should look. They helped visualize how<a href="http://www.nbcnews.com/card/how-battleground-states-voted-past-elections-n632996"> battle states voted in past elections </a>and where<a href="http://www.nbcnews.com/card/where-team-usa-hails-n628491"> Team USA Rio Olympians hail from</a>.</p>
+                <p>Designed NBC's first, original cartograms. Conducted in-depth research on the UX and design of cartograms, then sketched, prototyped, and pitched the final design idea. Proud to say that my design is now part of the internal newsroom's charting tool. They helped visualize how<a href="http://www.nbcnews.com/card/how-battleground-states-voted-past-elections-n632996"> battle states voted in past elections </a>and where<a href="http://www.nbcnews.com/card/where-team-usa-hails-n628491"> Team USA Rio Olympians hail from</a>.</p>
             </div>
         </div>
         <div class='parent'>
