--- a/index.html
+++ b/index.html
@@ -91,7 +91,7 @@
                 'http://www.nbcnews.com/specials/the-wrong-man-thomas-webb-iii'target="_blank">
                 <h3>The Wrong Man</h3></a>
                 <p class="pub">NBC News</p>
-                <p>Lead designer and developer of a story that hit more than 450,000 page views (2nd most viewed NBC specials story at the time). Collaborated with editorial and photo teams to decide which visuals would tell the story in the most meaningful ways. Used HTML, CSS, JavaScript, Node, Archie mark-up language. </p>
+                <p>Lead designer and developer of a story that hit more than 450,000 page views (2nd most viewed NBC specials story at the time). Collaborated with editorial and photo teams to decide the look and feel of the story. Used HTML, CSS, JavaScript, Node, Archie mark-up language. </p>
             </div>
         </div>
         <div class='parent'>
@@ -117,7 +117,7 @@
                 'http://www.nbcnews.com/storyline/team-refugees'target="_blank">
                 <h3>Olympic Team Refugees</h3></a>
                 <p class="pub">NBC News</p>
-                <p>Created graphics using D3.js and Illustrator to depict how far Team Refugee athletes traveled before finding refugee status. This was a highly collaborative project between the editorial and graphics team, and I was a liaison. See 18-year-old Syrian swimmer Yusra Mardini's journey <a href="http://www.nbcnews.com/card/rami-anis-journey-n621201">here</a>.</p>
+                <p>Created graphics using D3.js and Illustrator to depict how far Team Refugee athletes traveled before finding refugee status. This was a highly collaborative project between the editorial and graphics team. See 18-year-old Syrian swimmer Yusra Mardini's journey <a href="http://www.nbcnews.com/card/rami-anis-journey-n621201">here</a>.</p>
             </div>
         </div>
         <div class='parent'>
@@ -139,9 +139,9 @@
           "img/mobile.png"></a>
       </div>
       <div class="detail">
-          <h3>Mobile Homepage</h3></a>
+          <h3>Olympic Mobile Homepage</h3></a>
           <p class="pub">NBC News</p>
-          <p>Created mock design comps of the mobile home page for Rio Olympic coverage. Transformed a desktop design into a responsive, mobile friendly version that was not only aesthetically pleasing but also practical and efficient.</p>
+          <p>Created mock design comps of what the mobile home page will look like while featuring news from the Rio Olympics. Transformed a desktop design into a responsive, mobile friendly version that felt native but was also efficient.</p>
       </div>
   </div>
         <div class='parent'>
