--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
           </ul>
         </nav>
         <br>
-          <p class="description">Hello! I am a programmer and journalist studying at Northwestern University. I'm also a student fellow at the <a href="knightlab.northwestern.edu">Knight Lab</a>. Previously, I covered the presidential election for <a href="www.medillonthehill.medill.northwestern.edu/">Medill on the Hill</a> and interned at <a href="www.nbcnews.com">NBC News</a>. My work has been published by the <i> Washington Post</i>, NBC News, USA Today, and more. </p>
+          <p class="description">Hello! I am a journalist and self-taught programmer studying at Northwestern University. I'm also a student fellow at the <a href="knightlab.northwestern.edu">Knight Lab</a>. Previously, I covered the presidential election for <a href="http://medillonthehill.medill.northwestern.edu/author/elee/" target="_blank">Medill on the Hill</a> and interned at <a href="www.nbcnews.com" target="_blank">NBC News</a>. My work has been published by the <i> Washington Post</i>, NBC News, USA Today, and more. </p>
     </div>
     <div id="words-row">
         <h2>Favorite Words</h2>
