--- a/index.html
+++ b/index.html
@@ -91,7 +91,7 @@
                 'https://scene.knightlab.com/'target="_blank">
                 <h3>SceneVR</h3></a>
                 <p class="pub">Knight Lab Project</p>
-                <p>What if you could tell a story using a slideshow format with your 360 photos or panoramas? Along with four other amazing teammates, I helped conduct research, design, and build the beta version of this product using a-frame. This project is still ongoing but feel free to lurk around. </p>
+                <p>What if you could tell a story using a slideshow format with your 360 photos or panoramas? Along with four other amazing teammates, I helped conduct research, design, and build a beta version of this product using a-frame. This project is still ongoing.</p>
             </div>
         </div>
         <div class='parent'>
@@ -104,7 +104,7 @@
             <div class="detail">
                 <a href=
                 'http://www.nbcnews.com/specials/the-wrong-man-thomas-webb-iii'target="_blank">
-                <h3>SceneVR</h3></a>
+                <h3>The Wrong Man</h3></a>
                 <p class="pub">NBC News</p>
                 <p>Lead designer and developer of a story that hit more than 450,000 page views (2nd most viewed NBC specials story at the time). Collaborated with editorial and photo teams to decide the look and feel of the story. Used HTML, CSS, JavaScript, Node, Archie mark-up language. </p>
             </div>
