fix links in bio

--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
           </ul>
         </nav>
         <br>
-          <p class="description">Hey there! Thanks for checking my site. I'm a design-minded journalist with some front-end coding chops at Northwestern University. I'm also a student fellow at the <a href="knightlab.northwestern.edu" target="_blank">Knight Lab</a> and a student researcher at the <a href="dtr.northwestern.edu">Design/Tech/Research Lab</a>. Previously, I covered the presidential election for <a href="http://medillonthehill.medill.northwestern.edu/author/elee/" target="_blank"> Medill on the Hill </a> and interned at <a href="www.nbcnews.com" target="_blank">NBC News</a>. My work has been published by the <i> Washington Post</i>, NBC News, USA Today, and more. </p>
+          <p class="description">Hey there! Thanks for checking my site. I'm a design-minded journalist with some front-end coding chops at Northwestern University. I'm also a student fellow at the <a href="https://www.knightlab.northwestern.edu/" target="_blank">Knight Lab</a> and a student researcher at the <a href="https://www.dtr.northwestern.edu">Design/Tech/Research Lab</a>. Previously, I covered the presidential election for <a href="http://medillonthehill.medill.northwestern.edu/author/elee/" target="_blank"> Medill on the Hill </a> and interned at <a href="www.nbcnews.com" target="_blank">NBC News</a>. My work has been published by the <i> Washington Post</i>, NBC News, USA Today, and more. </p>
     </div>
     <div id="words-row">
         <h2>Favorite Words</h2>
