--- a/index.html
+++ b/index.html
@@ -90,7 +90,7 @@
                 'https://scene.knightlab.com/'target="_blank">
                 <h3>SceneVR</h3></a>
                 <p class="pub">Knight Lab Project</p>
-                <p>What if you could tell a story using panoramas and 360 photos? Along with four other amazing teammates, I helped conduct research, design, build and user test a beta version of this product. This project is built using node.js and a-frame. It's still ongoing, but we're pretty darn excited about the beta version we have right now. Check it out by clicking on the image.</p>
+                <p>What if you could tell a story using panoramas and 360 photos? SceneVR uses a-frame to help create webVR friendly photo slideshows. It's still ongoing, but we're pretty darn excited about the beta version we have right now. Check it out by clicking on the image.</p>
             </div>
         </div>
         <div class='parent'>
