changed font to lora

--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
     <link href=
     "https://fonts.googleapis.com/css?family=Josefin+Sans:300|Miriam+Libre|Montserrat|Noto+Sans"
     rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css?family=Lora" rel="stylesheet">
     <link href="style/base.css" rel="stylesheet">
     <link rel="stylesheet" href="style/responsive-nav.css">
     <!-- Viewport scale on devices , target-densitydpi=device-dpi-->
