added carebot and waves

--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
           </ul>
         </nav>
         <br>
-          <p class="description">Hi there! Thanks for checking my site. I'm a design-minded journalist with some front-end coding chops at Northwestern University. I'm also a student fellow at the <a href="https://www.knightlab.northwestern.edu/" target="_blank">Knight Lab</a> and a student researcher at the <a href="http://dtr.northwestern.edu/">Delta Lab</a>. Previously, I covered the presidential election for <a href="http://medillonthehill.medill.northwestern.edu/author/elee/" target="_blank"> Medill News Service</a> and interned at <a href="www.nbcnews.com" target="_blank">NBC News</a>. My work has been published by the <i> Washington Post</i>, NBC News, USA Today, and more. </p>
+          <p class="description">Hi there! Thanks for checking my site. I'm a design-minded journalist with some front-end coding chops at Northwestern University. I'm a huge fan of side projects that explore the intersections of art, code, design, and storytelling. At school, I'm a student fellow at the <a href="https://www.knightlab.northwestern.edu/" target="_blank">Knight Lab</a> and an undergrad researcher at the <a href="http://dtr.northwestern.edu/">Delta Lab</a>. Currently I'm in Washington D.C., working at Discovery Channel as a design research intern. Previously, I covered the presidential election for <a href="http://medillonthehill.medill.northwestern.edu/author/elee/" target="_blank"> Medill News Service</a> and interned at <a href="www.nbcnews.com" target="_blank">NBC News</a>. </p>
     </div>
     <div id="words-row">
         <h2>Favorite Words</h2>
@@ -79,6 +79,41 @@
 <!--  -->
     <div id="work-row">
         <h2>Favorite Projects</h2>
+        <div class='parent'>
+            <div class="col">
+                <a href=
+                'https://github.com/euniceylee/waves' target="_blank">
+                <img class='book' src=
+                "img/waves.jpg"></a>
+            </div>
+            <div class="detail">
+                <a href=
+                'https://github.com/euniceylee/waves'target="_blank">
+                <h3>Waves</h3></a>
+                <p class="pub">side project</p>
+                <p>Waves is a Raspberry Pi project centered around transforming the transience of the spoken word into something concrete and physical. You can read more about our design and development process here <a href="https://github.com/euniceylee/waves">here</a>. We were also featured on the RPI <a href=#>blog</a></p>
+            </div>
+        </div>
+
+        <div class='parent'>
+            <div class="col">
+                <a href=
+                'https://github.com/mazhang2718/care-bot' target="_blank">
+                <img class='book' src=
+                "img/carebot.jpg"></a>
+            </div>
+            <div class="detail">
+                <a href=
+                'https://github.com/mazhang2718/care-bot'target="_blank">
+                <h3>Carebot</h3></a>
+                <p class="pub">side project</p>
+                <p>A Facebook messenger bot that helps college students find the right mental health specialist under their insurance plan and near their location. Uses the Yelp and Better Doctor APIs to narrow down the search. This project won the $1,000 Yelp cash prize for best use of their API. You can see our code <a href="https://github.com/mazhang2718/care-bot">here</a> </p>
+            </div>
+        </div>
+
+
+
+
         <div class='parent'>
             <div class="col">
                 <a href=
