--- a/index.html
+++ b/index.html
@@ -38,7 +38,19 @@
               Romney says federal government is failing to solve problems nation faces </a>
               <br>
               <p class="pub">USA Today, Oct. 26, 2016</p>
-          </li>
+          </li>// Built by LucyBot. www.lucybot.com
+var url = "https://api.nytimes.com/svc/books/v3/lists//.json";
+url += '?' + $.param({
+  'api-key': "d5c3f9063fa94bb288e73e7c959e64f1"
+});
+$.ajax({
+  url: url,
+  method: 'GET',
+}).done(function(result) {
+  console.log(result);
+}).fail(function(err) {
+  throw err;
+});
             <li>
                 <a href=
                 "https://www.washingtonpost.com/news/worldviews/wp/2016/08/12/french-millennials-talk-about-life-in-a-country-struggling-with-unemployment-migration-and-terror/#comments" target="_blank">
@@ -107,7 +119,7 @@
                 'https://github.com/mazhang2718/care-bot'target="_blank">
                 <h3>Carebot</h3></a>
                 <p class="pub">side project</p>
-                <p>A Facebook messenger bot that helps college students find the right mental health specialist under their insurance plan and near their location. Uses the Yelp and Better Doctor APIs to narrow down the search. This project won the $1,000 Yelp cash prize for best use of their API. You can see our code <a href="https://github.com/mazhang2718/care-bot">here</a> </p>
+                <p>A Facebook messenger bot that helps college students find the right mental health specialist under their insurance plan and near their location. Uses the Yelp and Better Doctor APIs to narrow down the search. This project won the $1,000 Yelp cash prize for best use of their API. <a href="https://medium.com/@euniceylee/how-we-built-carebot-ce162223596c">Here's</a> how we designed and developed it. <a href="https://github.com/mazhang2718/care-bot">Code here</a> </p>
             </div>
         </div>
 
