--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
           </ul>
         </nav>
         <br>
-          <p class="description">Hi there! Thanks for checking my site. I'm a design-minded journalist with some front-end coding chops at Northwestern University. I'm a huge fan of side projects that explore the intersections of art, code, design, and storytelling. At school, I'm a student fellow at the <a href="https://www.knightlab.northwestern.edu/" target="_blank">Knight Lab</a> and an undergrad researcher at the <a href="http://dtr.northwestern.edu/">Delta Lab</a>. Currently I'm in Washington D.C., working at Discovery Channel as a design research intern. Previously, I covered the presidential election for <a href="http://medillonthehill.medill.northwestern.edu/author/elee/" target="_blank"> Medill News Service</a> and interned at <a href="www.nbcnews.com" target="_blank">NBC News</a>. </p>
+          <p class="description">Hi there! Thanks for checking my site. I'm a design-minded journalist with some front-end coding chops at Northwestern University. My self-starter attitude comes all my side projects where I explore the intersections of art, code, design, and storytelling. At school, I'm a student fellow at the <a href="https://www.knightlab.northwestern.edu/" target="_blank">Knight Lab</a> and an undergrad researcher at the <a href="http://dtr.northwestern.edu/">Delta Lab</a>. Currently you can find me in Washington D.C. interning at Discovery Channel as their data visualization intern. Past gigs include covering the elections for <a href="http://medillonthehill.medill.northwestern.edu/author/elee/" target="_blank"> Medill News Service</a>, creating graphics for <a href="www.nbcnews.com" target="_blank">NBC News</a>, and helping ProPublica clean up their APIs. </p>
     </div>
     <div id="words-row">
         <h2>Favorite Words</h2>
@@ -38,20 +38,6 @@
               Romney says federal government is failing to solve problems nation faces </a>
               <br>
               <p class="pub">USA Today, Oct. 26, 2016</p>
-          </li>// Built by LucyBot. www.lucybot.com
-var url = "https://api.nytimes.com/svc/books/v3/lists//.json";
-url += '?' + $.param({
-  'api-key': "d5c3f9063fa94bb288e73e7c959e64f1"
-});
-$.ajax({
-  url: url,
-  method: 'GET',
-}).done(function(result) {
-  console.log(result);
-}).fail(function(err) {
-  throw err;
-});
-            <li>
                 <a href=
                 "https://www.washingtonpost.com/news/worldviews/wp/2016/08/12/french-millennials-talk-about-life-in-a-country-struggling-with-unemployment-migration-and-terror/#comments" target="_blank">
                 French millennials talk about life in a country struggling with
