--- a/index.html
+++ b/index.html
@@ -90,7 +90,7 @@
                 'https://github.com/euniceylee/waves'target="_blank">
                 <h3>Waves</h3></a>
                 <p class="pub">side project</p>
-                <p>Waves is a Raspberry Pi project centered around transforming the transience of the spoken word into something concrete and physical. You can read more about our design and development process here <a href="https://github.com/euniceylee/waves">here</a>. We were also featured on the RPI <a href=#>blog</a></p>
+                <p>Waves is a Raspberry Pi project that asks you to answer a personal question and then prints out the soundwaves as a gift for you to keep and decode forever. You can read more about our design and development process <a href="https://github.com/euniceylee/waves">here</a>. We were also featured on the RPI <a href=#>blog</a></p>
             </div>
         </div>
 
