Update project body

--- a/index.html
+++ b/index.html
@@ -205,7 +205,7 @@
                 'https://jour383-final.firebaseapp.com/' target="_blank">
                 <h3>What Actually Treats Your Cold?</h3></a>
                 <p class="pub">Class Project</p>
-                <p>I designed, developed, and wrote a service-orientated piece about over-the-counter cold medications. The crux of the project was creating a card filtering system that explained common active ingredients in drug labels. I thought it would be useful for consumers at a pharmacy trying to make sense of an often overwhelming cold medication aisle. Due to time constraints, this project is not mobile responsive – something I hope to fix in the near future. Used HTML, CSS, JavaScript, and jQuery.</p>
+                <p>Designed, developed, and wrote a service-orientated piece about OTC cold medications. The crux of the project was creating a card filtering system that explained common active ingredients in drug labels. I thought it would be useful for consumers at a pharmacy trying to make sense of an often overwhelming cold medication aisle. Due to time constraints, this project is not mobile responsive. Used HTML, CSS, JavaScript, and jQuery. See it live <a href="https://jour383-final.firebaseapp.com/">here</a>.</p>
             </div>
         </div>
         <div class='parent'>
@@ -218,7 +218,7 @@
               <a href="https://iraq-a704c.firebaseapp.com/" target="_blank">
                 <h3>A Year of Terror in Iraq</h3></a>
                 <p class="pub">Personal Project</p>
-                <p>I came across an article in the BCC explaining the biggest ISIS-led attack in Iraq in June 2016 that had no visual but simply 300 words and a table. I wanted to practice my D3, Illustrator, and ai2tml skills, so I created a map version that also showed the number of casualties. Used D3.js to create the basemap, converted it to an SVG, and used Illustrator to label details.</p>
+                <p>I came across an article in the BCC explaining the biggest ISIS-led attack in Iraq around June 2016. I thought that the article could really use a benefit so I decided to practice my D3, Illustrator, and ai2tml skills to create a map version. Used D3.js to create the basemap, converted it to an SVG, and used Illustrator to label details. See it live <a href="https://iraq-a704c.firebaseapp.com/">here</a>.</p>
             </div>
         </div>
         <br>
